tests/snapshots/run_wpt_conformance__onnx_sin_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sin.https.any.js",
    "sin float16 1D tensor",
    "onnx",
    "PASS",
)
