tests/snapshots/run_wpt_conformance__onnx_sin_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sin.https.any.js",
    "sin float16 5D tensor",
    "onnx",
    "PASS",
)
